tests/errors/preprocessor/large_value/in_if.c
void main()
{
#if 13243546576879809890 == 13243546576879809890
	print("1\n");
#endif
}
